# Petrova

./: .gitignore  settings.gradle
aes/: build.gradle
aes/src/androidTest/java/com/example/aes/: ExampleInstrumentedTest.java
aes/src/main/: AndroidManifest.xml
aes/src/main/java/com/example/aes/: AndroidAES.java  JavaxAES.java  MainActivity.java  PermissionHelper.java
aes/src/main/res/layout/: activity_main.xml
aes/src/test/java/com/example/aes/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
btble/: build.gradle
btble/src/main/: AndroidManifest.xml
btble/src/main/res/layout/: activity_main.xml
btble/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
kaleidoscope/: build.gradle
kaleidoscope/src/main/: AndroidManifest.xml
kismet/: CMakeLists.txt  build.gradle
kismet/include/common/: RunnablePsx.h
kismet/include/data/: DmxData.h  PlayerData.h  VoData.h
kismet/include/gl/: GLShader.h  GLTexture.h  GLWindow.h
kismet/include/player/: FFDecoder.h  FFDemuxer.h  GLShader.h  GLTexture.h  GLWindow.h  KismetPlayer.h  PlayerData.h  kismetplayer.h
kismet/include/util/: BlockingQueuePosix.h  BlockingQueueSTL.h  KisLog.h  KisThd.h  ThreadPosix.h
kismet/src/androidTest/java/com/knox/kismet/: ExampleInstrumentedTest.java
kismet/src/main/: AndroidManifest.xml
kismet/src/main/cpp/: native-lib.cpp
kismet/src/main/cpp/common/: RunnablebPsx.cpp
kismet/src/main/cpp/data/: DmxData.cpp  VoData.cpp
kismet/src/main/cpp/gl/: GLShader.cpp  GLTexture.cpp  GLWindow.cpp
kismet/src/main/cpp/jni/: com_knox_kismet_player_KismetPlayer.cpp  native-lib.cpp
kismet/src/main/cpp/player/: FFDecoder.cpp  FFDemuxer.cpp  GLShader.cpp  GLTexture.cpp  GLWindow.cpp  KismetPlayer.cpp  VoData.cpp  kismetplayer.cpp
kismet/src/main/java/com/knox/kismet/: KismetActivity.java  NativeWrapper.java  PlayerProxy.java
kismet/src/main/java/com/knox/kismet/player/: BasePlayer.java  KismetPlayer.java
kismet/src/main/res/layout/: activity_kismet.xml
kismet/src/test/java/com/knox/kismet/: ExampleUnitTest.java
ringbuffer/: CMakeLists.txt  build.gradle
ringbuffer/src/androidTest/java/com/example/ringbuffer/: ExampleInstrumentedTest.java
ringbuffer/src/main/: AndroidManifest.xml
ringbuffer/src/main/cpp/io/: CjRingBuffer.cpp  CjRingBuffer.h
ringbuffer/src/main/java/com/knox/io/: CjBufferData.java  CjRingBuffer.java
ringbuffer/src/main/java/com/knox/ref/apachecommonsio/buffer/: CircularBufferInputStream.java  CircularByteBuffer.java  PeekableInputStream.java  package-info.java
ringbuffer/src/main/java/com/knox/ref/jenkov/: Java Ring Buffer.html
ringbuffer/src/main/java/com/knox/ref/jenkov/Java Ring Buffer_files/: Enqz_20U(1).html  ads(1).html  ads(2).html  ads(3).html  ads.html  banner.js  blueprint.js  cb=gapi(1).loaded_0  cookie_push(1).html  cookie_push(2).html  cookie_push.html  f(1).txt  f(10).txt  f(5).txt  f(7).txt  f(8).txt  f(9).txt  f.txt  index.html  pixel(6).html  pixel(7).html  pixel.html  platform.js  postmessageRelay.html  saved_resource(1).html  saved_resource(2).html  saved_resource(3).html  saved_resource.html  sharebutton.html  tweet_button.4f8aea4342a4ada72cba2bdffcff6b4d.en.html  widget_iframe.4f8aea4342a4ada72cba2bdffcff6b4d.html  zrt_lookup.html
ringbuffer/src/main/java/com/knox/ref/ostermillerutils/: BufferOverflowException.java  CircularBufferTests.java  CircularByteBuffer.java  CircularCharBuffer.java  CircularObjectBuffer.java
ringbuffer/src/main/java/com/knox/ref/wkgcass/: RingBuffer.java
ringbuffer/src/main/res/values/: strings.xml
ringbuffer/src/test/java/com/example/ringbuffer/: ExampleUnitTest.java
(+17 files in other folders)
